// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component Should concat classname in props with Bulma classname 1`] = `
<div
  className="tile other-class this-is-a-test"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "children": null,
    "notification": false,
    "renderAs": "div",
    "vertical": false,
  },
  "render": [Function],
}
`;

exports[`Tile component Should have notification classname 1`] = `
<div
  className="tile"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</div>
`;

exports[`Tile component Should render as Section 1`] = `
<section
  className="tile"
>
  <p>
    Default
  </p>
</section>
`;

exports[`Tile component Should use inline styles 1`] = `
<div
  className="tile"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;

exports[`Tile component Should use use color black 1`] = `
<div
  className="tile is-black notification"
>
  <p>
    Default 
    black
  </p>
</div>
`;

exports[`Tile component Should use use color danger 1`] = `
<div
  className="tile is-danger notification"
>
  <p>
    Default 
    danger
  </p>
</div>
`;

exports[`Tile component Should use use color dark 1`] = `
<div
  className="tile is-dark notification"
>
  <p>
    Default 
    dark
  </p>
</div>
`;

exports[`Tile component Should use use color info 1`] = `
<div
  className="tile is-info notification"
>
  <p>
    Default 
    info
  </p>
</div>
`;

exports[`Tile component Should use use color light 1`] = `
<div
  className="tile is-light notification"
>
  <p>
    Default 
    light
  </p>
</div>
`;

exports[`Tile component Should use use color link 1`] = `
<div
  className="tile is-link notification"
>
  <p>
    Default 
    link
  </p>
</div>
`;

exports[`Tile component Should use use color primary 1`] = `
<div
  className="tile is-primary notification"
>
  <p>
    Default 
    primary
  </p>
</div>
`;

exports[`Tile component Should use use color success 1`] = `
<div
  className="tile is-success notification"
>
  <p>
    Default 
    success
  </p>
</div>
`;

exports[`Tile component Should use use color warning 1`] = `
<div
  className="tile is-warning notification"
>
  <p>
    Default 
    warning
  </p>
</div>
`;

exports[`Tile component Should use use color white 1`] = `
<div
  className="tile is-white notification"
>
  <p>
    Default 
    white
  </p>
</div>
`;
